crates/eure-macros/tests/compile_fail/flatten_and_flatten_ext_conflict.rs
use eure::FromEure;

#[derive(FromEure)]
struct Test {
    #[eure(flatten, flatten_ext)]
    field: String,
}

fn main() {}
